# retail-order-sync-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  dbt-docs.yml  dbt-scheduled.yml
adr/: 001-erp-odoo.md  002-marketplaces.md  003-broker-pubsub.md  004-storage-bigquery-dbt.md  005-mcp-iam.md
dbt/: dbt_project.yml  profiles.yml.template
dbt/models/: sources.yml
dbt/tests/: assert_sla_non_negative.sql  assert_throughput_non_negative.sql
docs/: adapters.md  cost-analysis.md  deploy-gcp.md  fde-narrative.md  guia-demo.md  guia-didactica.md  iam.md  mcp-setup.md  observability.md  security-review.md
docs/blog/: design-decisions.md
docs/diagrams/: architecture.mmd
infra/: Dockerfile.app  Dockerfile.webhook  docker-compose.obs.yml  docker-compose.yml  otel-collector-config.gcp.yml  otel-collector-config.yml
infra/cloudrun/: deploy.sh  service.yaml
infra/prometheus/: alerts.yml  prometheus.yml
infra/tempo/: tempo.yml
infra/terraform/: .gitignore  example.tfvars  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf
migrations/: env.py
migrations/versions/: 5e02a22c07a2_outbox_unique_aggregate_id_target_.py  f4a969e1716f_initial_schema_skeleton_tables.py
ops_console/: app.py
scripts/: __init__.py  backfill_bronze.py  init_pubsub.py  seed_odoo.py  send_webhooks.py  sync_demo.py
scripts/chaos/: flood_dlq.py
src/: __init__.py
src/adapters/: _http.py  base.py  mercadolibre.py  paris.py
src/bq_sync/: __main__.py  client.py  schema.py  sync.py
tests/: conftest.py
(+76 files in other folders)
